Build jenkin sever using pipeline

--- a/.env-jenkins
+++ b/.env-jenkins
@@ -1,21 +1,22 @@
-# CREATE DATABASE orp DEFAULT CHARSET = utf8mb4 DEFAULT COLLATE = utf8mb4_unicode_ci
-DB_NAME=example
-DB_PASSWORD=example
-DB_USER=root
-DB_HOST=127.0.0.1
-DB_PORT=3306
-SECRET_KEY=example
+# DB_NAME=orp
+# DB_PASSWORD=12341234
+# DB_USER=root
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# SECRET_KEY=hehehehehehe123
 
 # azure-sql
-# DB_NAME=orphanage_management
-# DB_PASSWORD=Sweetcandy@123
-# DB_USER=nguyen13901
-# DB_HOST=orphanage-management.mysql.database.azure.com
-# DB_PORT=3306
-# SECRET_KEY=e85ChrutN|Yo>Ff
+DB_NAME=orp
+DB_PASSWORD=Sweetcandy@123
+DB_USER=nguyen13901
+DB_HOST=orphanage-management.mysql.database.azure.com
+DB_PORT=3306
+SECRET_KEY=e85ChrutN|Yo>Ff
 
-DEFAULT_ADMIN_EMAIL=example
-DEFAULT_ADMIN_PASSWORD=example
+DEFAULT_ADMIN_EMAIL=superadmin@gmail.com
+DEFAULT_ADMIN_PASSWORD=12345678
+DEFAULT_EMPLOYEE_PASSWORD=12345678
+#DEFAULT_PERSONAL_EMAIL=f4.dut@gmail.com
 DEFAULT_ADMIN_AVATAR=https://res.cloudinary.com/boninguci/image/upload/v1662953022/pbl6/avatar/blog2_yiztav.jpg
 
 #cloudinary
@@ -23,13 +24,14 @@ CLOUDINARY_NAME=boninguci
 CLOUDINARY_API_KEY=837327996331646
 CLOUDINARY_API_SECRET=RiyvxIh5wOskjMKzFO3-fywpGIA
 CLOUDINARY_AVATAR_FOLDER=pbl6/avatar/
+CLOUDINARY_PROOF_FOLDER=pbl6/proof/
 CLOUDINARY_CHILDREN_FOLDER=pbl6/children/
 CLOUDINARY_ACTIVITY_FOLDER=pbl6/activity/
 
 #Email
 EMAIL_HOST=smtp@gmail.com
 EMAIL_HOST_USER=orphanage.f4plus@gmail.com
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST_PASSWORD=jfihazvwdltwqvkn
 DEFAULT_FROM_EMAIL=orphanage.f4plus@gmail.com
 DEFAULT_EMAIL_ADMIN=orphanage.f4plus@gmail.com
 WEB_INTERNAL=
